--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: cache
 description: Simple HTTP cache.
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -14,6 +14,8 @@ dependencies:
   http: ^1.1.0
   dio: ^5.3.3
   dio_cache_interceptor: ^3.4.4
+  flutter_native_splash: "2.3.6"
+  flutter_launcher_icons: "0.13.1"
 
 dev_dependencies:
   flutter_test:
