--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   dio: ^5.3.3
-  dio_cache_interceptor: ^3.4.4
+  dio_cache_interceptor: "3.4.4"
   flutter_native_splash: "2.3.6"
   flutter_launcher_icons: "0.13.1"
 
