--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="OCTO Cache"
+        android:label="OCTO 2024"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
